2008-08-24  Martin Nordholts  <martinn@svn.gnome.org>

	* app/widgets/gimpnavigationview.c
	(gimp_navigation_view_set_marker): Don't redraw the view, only
	invalidate it. This causes the redraw to occur in an idle-handler
	intead of each time this function is called, which reduces flicker
	when opening new images. Stil some flicker left though...

2008-08-24  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/scale-region.c (scale) (scale_pr): use a
	constant to decide if we should decimate or interpolate.

2008-08-24  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/scale-region.c (scale): instead of iterating
	over tiles manually and using write_pixel_data_1() to write the
	data, use pixel_region_process() to iterate over the destination.

2008-08-24  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/scale-region.c: added more const qualifiers.

2008-08-24  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/scale-region.c (scale): sprinkled with const
	qualifiers. Moved calculations out of the loops.

2008-08-24  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/scale-region.c (scale): removed optimization of
	the case where the source and dest regions are the same size. This
	should not happen any longer.

2008-08-24  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/scale-region.c (determine_scale): avoid
	unnecessary scaling when scaling factor is 2^n.
	(pixel_average): replaced with optimized pixel averager from
	tile-pyramid.c (from the gimp-2-4 branch with some minor
	corrections).

2008-08-23  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/scale-region.c (scale): replaced code that
	copies pixels from one tile-manager to another by a call to
	copy_region().

2008-08-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.c: return with a proper PDB status type
	depending on the result of gtk_print_operation_run(). When run
	non-interactively, pass the error message with the return values.

2008-08-23  Sven Neumann  <sven@gimp.org>
